# Mobius-RAG

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DELETE_INSTRUCTIONS.md  Dockerfile  INSTALL_AND_TEST.md  PATH_B_STATUS.md  STATUS.md  STEP7_PLAN.md  TESTING.md  cleanup_document.sh  create_db.py  delete_document.py  delete_document.sql  delete_via_api.py  force_delete.py  git_init_and_push.sh  mragb  mrage  mragf  mragm  mragt  mragw  pyproject.toml  run_category_migration.sh  run_staging_migrations.py  setup-mrag-cli.sh  setup_all.sh  setup_database.py  setup_db.sh  start_backend.sh  start_worker.sh  test_extraction.py
.claude/: launch.json
app/: config.py  database.py  embedding_worker.py  init_db.py  logging_setup.py  main.py  models.py  nightly_infra.py  nightly_orchestrator.py  worker.py  worker_server_chunking.py  worker_server_embedding.py
app/curator/: __init__.py  classifier.py  routes.py  service.py
app/llm_configs/: README.md  default.yaml  openai.yaml.example  (+1 more)
credentials/: README.md
data/: policy_lexicon.yaml
deploy/: deploy_cloudrun.sh  deploy_cloudrun_dev.sh  deploy_to_vm.sh  nginx-mobius-rag.conf  vm_setup.sh
docs/: CHUNKING_REFACTOR_IMPLEMENTATION_AND_TESTING.md  CONTRACT_DBT_RAG.md  CREDENTIALS.md  DESIGN_MD_AS_MASTER.md  GCP_DEPLOYMENT.md  MIGRATE_TO_GCP.md  PATH_B_TAGS_AND_CANDIDATES.md  answer-engine-contract-freeze.md  diagnostics-card-content-tree.md  fact-store-leaf-card.html  payor-fact-store-spec.md  rag-emit-spec.md  rag-retrieval-learning-architecture.md  refactor-embedding-completion-invariant.md
eval/: analyze_matrix.py  calibrate.py  db.py  derive_priors.py  ga-baseline-joint-forensic.md  judge.py  queries.yaml  queries_cmhc.yaml  queries_cmhc_smoke.yaml  queries_gate_contours.yaml  run.py  run_matrix.py  time_cmhc.py
frontend/: .env.production  .env.production.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: PROBE_README.md  audit_d_tag_coverage.py  check_policy_lines_tags.py  check_published_document.py  clean_chroma_orphans.py  cleanup_stale_jobs.sql  compute_lexicon_phrase_precision.py  debug_policy_lines_endpoint.py  install_pgvector_for_postgresql14.sh  kill_and_reset_document.py  migrate_to_gcp.sh  migrate_to_gcp_psql.sh  probe_search_agent.py  publish_unpublished_documents.py  run_chunking_and_stream_log.py  run_gate_on_cmhc.py  run_gate_on_contour_bank.py  run_nightly_pipeline.sh  setup_drive_oauth.sh  terminate_idle_connections.sql
tests/: __init__.py  conftest.py  integration_chunking_test.py  integration_test_report.txt  test_api.py  test_chunking.py  test_curator_classifier.py  test_curator_service.py  test_html_extractor.py  test_policy_path_b.py  test_shape_gate.py  test_tag_propagation.py  test_utils.py  test_worker_config.py  test_worker_context.py  test_worker_coordinator.py  test_worker_db.py  test_worker_errors.py  test_worker_path_a.py  test_worker_path_b.py
(+221 files in other folders)
