[project]
name = "mobius-rag"
version = "0.1.0"
description = "Eligibility RAG system"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "google-cloud-storage",
    "sqlalchemy",
    "asyncpg",
    "python-dotenv",
    "pymupdf",
    "greenlet",
    "aiohttp",
    "json-repair",
    "pyyaml",
    "beautifulsoup4",
    "google-api-python-client",
    "google-auth-oauthlib",
    "markdown>=3.5",
    "xhtml2pdf>=0.2.15",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]
openai = [
    "openai>=1.0",
]
vertex = [
    "google-cloud-aiplatform>=1.38",
]
chroma = [
    "chromadb>=0.4.0",
    # publish_sync._chat_pg_upsert_batch uses psycopg2 to write the
    # mobius_chat.published_rag_metadata row (sync lib, offloaded via
    # asyncio.to_thread). asyncpg can't talk to that DB because chat
    # owns the sync Alembic schema there.
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
